correction images et quelques erreurs lighthouse

--- a/style.css
+++ b/style.css
@@ -744,6 +744,8 @@ h4 {
 
 .portfolio-thumb {
     margin-bottom: 24px;
+    width: 270px;
+    height: 270px;
 }
 
 .portfolio-row {
@@ -821,7 +823,7 @@ h4 {
 }
 
 .bg-banniere {
-    background-image: url("img/agence-la-panthere.webp");
+    background-image: url("img/agence-la-panthere-ban.webp");
 }
 
 .bg-presentation {
