--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -7794,6 +7794,8 @@ button.close {
 }
 
 .center-block {
+    width: 100px;
+    height: 100px;
     display: block;
     margin-right: auto;
     margin-left: auto
