--- a/css/style.css
+++ b/css/style.css
@@ -704,6 +704,8 @@ p {
 }
 
 .social {
+    display: flex;
+    justify-content: center;
     max-width: 400px;
     margin: auto auto auto auto;
 }
@@ -744,6 +746,8 @@ h4 {
 }
 
 .portfolio-thumb {
+    margin-left: auto;
+    margin-right: auto;
     margin-bottom: 24px;
     width: 270px;
     height: 270px;
