--- a/css/style.css
+++ b/css/style.css
@@ -967,7 +967,7 @@ h4 {
     }
     .navbar-brand img {
         max-height: 40px;
-        width: auto;
+        width: 217px;
     }
     .nav-invert .navbar-header {
         float: none;
