--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -5225,7 +5225,7 @@ textarea.input-group-sm>.input-group-btn>.btn {
 }
 
 .navbar-toggle:focus {
-    outline: 0
+    outline: black;
 }
 
 .navbar-toggle .icon-bar {
